--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDelivery;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=SQL1002.site4now.net;Initial Catalog=db_ab31ae_fooddelivery;User Id=db_ab31ae_fooddelivery_admin;Password=FDCMartinCS#3750"
+    "DefaultConnection": "Server=SQL1001.site4now.net; Initial Catalog=db_ab31ae_fooddelivery; User Id=db_ab31ae_fooddelivery_admin;Password=FDCMartinCS#3750",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDelivery;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
