--- a/FoodDelivery/FoodDelivery.csproj
+++ b/FoodDelivery/FoodDelivery.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Customer\Cart\" />
     <Folder Include="wwwroot\images\menuitems\" />
   </ItemGroup>
 
