Finished All Files in Videos

--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Stripe": {
+    "SecretKey": "sk_test_YOUR KEY",
+    "PublishableKey": "pk_test_YOUR KEY"
+  }
+
 }
