Ignore appsettings files

--- a/.gitignore
+++ b/.gitignore
@@ -360,4 +360,6 @@ MigrationBackup/
 .ionide/
 
 # Fody - auto-generated XML schema
-FodyWeavers.xsd
+FodyWeavers.xsdFoodDelivery/appsettings.json
+appsettings.json
+appsettings.*.json
